styles/globals.css
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  font-size: 16px;
}

* {
  box-sizing: border-box;
}

#topbar a,
#topbar a:visited,
header a,
header a:visited,
header nav a,
header nav a:visited {
  text-decoration: none;
  color: white;
}

#topbar,
header,
main {
  padding: 0.5rem;
}

#topbar {
  display: flex;
  justify-content: flex-end;
  background-color: rgb(56, 138, 158);
}

header {
  display: flex;
  background-color: rgb(64, 157, 180);
}

header h1 {
  margin: 0;
  padding: 0;
  font-weight: 500;
}

header nav {
  display: flex;
  flex-grow: 2;
  justify-content: flex-end;
  align-items: flex-end;
}

header nav a {
  display: block;
  padding: 0 0.5rem;
}

header nav a:first-child {
  padding-left: 0;
}

header nav a:last-child {
  padding-right: 0;
}

.package-table-wrapper {
  max-height: 300px;
  overflow-y: scroll;
}

table.package-table {
  box-sizing: content-box;
  border-collapse: collapse;
}

table.package-table td {
  padding: 0.25rem 0.5rem;
}

input {
  font-size: inherit;
  width: 100%;
}

.debug-box {
  border: 1px solid #ccc;
  border-radius: 3px;
  line-height: 1.5em;
  margin-bottom: 1.5rem;
}

.debug-box-header {
  background-color: #eee;
}

.debug-box-header,
.debug-box-body {
  padding: 0.5em;
}

.error {
  border: 1px solid #ccc;
  border-radius: 3px;
  line-height: 1.5em;
  display: inline-block;
  min-width: 300px;
}

.error-header {
  background-color: red;
  padding: 0.5em;
  color: white;
}

.error-body {
  padding: 0.2em 0.5em;
}

.breadcrumb a,
.breadcrumb a:visited {
  color: blue;
}

.search-result {
  display: flex;
}

.search-result.loading {
  animation: 0.5s infinite alternate pulse;
}

.search-result > div {
  padding: 0.25em;
}

.search-result-text {
  width: 100%;
}

.search-result.loading > .search-result-text > div {
  background-color: rgba(200, 200, 200, 0.75);
  width: 100%;
  margin: 4px 0;
}

@keyframes pulse {
  from {
    opacity: 0.8;
  }

  to {
    opacity: 1;
  }
}

.quick-search form {
  display: flex;
  font-size: 2em;
}

.quick-search button {
  width: 4em;
}

